--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "getJokes",
+  "name": "jokes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "(cd ui && npm install && npm run-script build) && (cd server && npm install)",
+    "start": "(cd server && node index.js &) && (cd ui && npm start)"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
-  }
+  "author": "Michael Bossart",
+  "license": "ISC"
 }
